<resources>
    <string name="app_name">Race Roster</string>
    <string name="personal_record">Personal Record</string>
    <string name="_4_of_6">4 of 6</string>
    <string name="virtual_race">Virtual Race</string>
    <string name="achievements">Achievements</string>
    <string name="back_button">Back button</string>
    <string name="settings_button">Settings Button</string>
    <string name="trophy_image">Trophy Image</string>
</resources>