<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerColor"
        android:title="@string/achievements">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/achievements"
            android:textColor="@color/background"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="80dp"
            android:clickable="true"
            android:contentDescription="@string/settings_button"
            android:src="@drawable/ic_baseline_more_vert_24"
            tools:ignore="RtlHardcoded" />

    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>
