<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <include layout="@layout/tool_bar"/>
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_record"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/_4_of_6" />

    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/personalRecordRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:fadeScrollbars="true"/>

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtual_race"
            android:textColor="@color/black" />
    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/virtualRaceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true" />
</LinearLayout>
